--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,14 @@
 .nav {
     grid-area: n;
     background-color: burlywood;
+    padding: 20px;
 }
 
 .item a {
     color: white;
+    text-decoration: none;
 }
 
-a:focus {
+.item a.activeLink {
     color: gold;
 }
